<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ws1415.ps1415.activity.EditProfileActivity">
    <item
        android:id="@+id/action_save"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/profile_edit_save" />
</menu>
