...

        <com.wrapp.floatlabelededittext.FloatLabeledEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/activity_edit_profile_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="40"
                android:singleLine="true"
                android:hint="@string/first_name" />
        </com.wrapp.floatlabelededittext.FloatLabeledEditText>
...
